# torii

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRD-PARTY-NOTICES  dune-project  install.ps1  install.sh  watch.sh
.github/workflows/: release.yml
_build/: .db  .digest-db  log
_build/default/: dust.dune-package  dust.install
_build/default/.ppx/bcab0be011c28261c514e69f4fe141f8/: dune__exe___ppx.cmo
_build/default/src/: main.ml  main.pp.ml  routes.ml  routes.pp.ml
_build/default/src/.main.eobjs/: dune__exe.ml-gen  dune__exe__Main.impl.all-deps  main.pp.ml.d  routes.pp.ml.d
_build/default/src/.main.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Main.cmi  dune__exe__Main.cmti  dune__exe__Routes.cmi  dune__exe__Routes.cmo  dune__exe__Routes.cmt
_build/default/src/.main.eobjs/native/: dune__exe.cmx  dune__exe__Main.cmx  dune__exe__Routes.cmx
_build/default/src/.merlin-conf/: exe-main
_build/default/src/hyper/: hyper.cma  hyper.cmxa  hyper.cmxs
_build/default/src/hyper/.hyper.objs/byte/: hyper.cmi  hyper.cmo  hyper.cmt
_build/default/src/hyper/.hyper.objs/native/: hyper.cmx
_build/default/src/hyper/.merlin-conf/: lib-hyper
_build/default/src/pages/: about.ml  index.ml  pages.cma  pages.cmxa  pages.cmxs  pages.ml-gen
_build/default/src/pages/.merlin-conf/: lib-pages
_build/default/src/pages/.pages.objs/: about.ml.d  index.ml.d
_build/default/src/pages/.pages.objs/byte/: pages.cmi  pages.cmo  pages.cmt  pages__About.cmi  pages__About.cmo  pages__About.cmt  pages__Index.cmi  pages__Index.cmo  pages__Index.cmt
_build/default/src/pages/.pages.objs/native/: pages.cmx  pages__About.cmx  pages__Index.cmx
_build/install/default/lib/dust/: META  dune-package  opam
crates/pi-harness/: Cargo.toml
crates/pi-harness-pi/: Cargo.toml
crates/pi-harness-pi/src/: lib.rs
crates/pi-harness/src/: lib.rs
crates/pi-shell/: Cargo.toml
crates/pi-shell/src/: main.rs  supervisor.rs  task.rs  update.rs  workflow.rs
crates/pi-tui/: Cargo.toml
crates/pi-tui/src/: actions.rs  agent_layout.rs  effects.rs  fixtures.rs  lib.rs  markdown.rs  overlay.rs  picker.rs  prompt.rs  scrollback.rs  state.rs  theme.rs  ui.rs
docs/: workflows.md
examples/workflows/: approved-github-mutation.yaml  composed-code-audit.yaml  focused-review.yaml  production-multimodel-github.yaml  shared-code-audit.yaml
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/src/: clean_compaction_summary.test.ts  command-dispatch.test.ts  command-dispatch.ts  index.ts  pi-adapter-history.test.ts  pi-adapter.ts  protocol.ts  subagents.test.ts  subagents.ts  workflow-restart-fixture.ts  workflows.test.ts
sidecar/src/workflows/: coordinator.ts  definition.ts  identity.ts  reducer.ts  store.ts  types.ts  values.ts
src/: dune
src/hyper/: dune  hyper.ml
src/pages/: dune
