[workspace]
members = [
    "crates/pi-harness",
    "crates/pi-harness-pi",
    "crates/pi-shell",
    "crates/pi-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
arboard = { version = "3.6", features = ["image-data", "wayland-data-control"] }
clipboard-rs = "0.3.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
async-trait = "0.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
ratatui = "0.30.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
unicode-width = "0.2"
