[workspace]
members = [
    "crates/pi-harness",
    "crates/pi-harness-pi",
    "crates/pi-shell",
    "crates/pi-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
arboard = { version = "3.6", features = ["image-data", "wayland-data-control"] }
clipboard-rs = "0.3.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
async-trait = "0.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
flate2 = "1.1"
ratatui = "0.30.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
pulldown-cmark = "0.13"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
unicode-width = "0.2"
uuid = { version = "1.18", features = ["v4"] }
fs2 = "0.4"
sha2 = "0.10"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
zip = { version = "7.2", default-features = false, features = ["deflate"] }
