[package]
name = "pi-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
clipboard-rs.workspace = true
image.workspace = true
crossterm.workspace = true
futures-util.workspace = true
pi-harness = { path = "../pi-harness" }
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-width.workspace = true
png = "0.18"
